--- a/TnTComponents.Testing/TnTComponents.Server/TnTComponents.Server.csproj
+++ b/TnTComponents.Testing/TnTComponents.Server/TnTComponents.Server.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\TnTComponents\TnTComponents.csproj" />
     <ProjectReference Include="..\TnTComponents.Client\TnTComponents.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0-rc.2.23455.8" />
   </ItemGroup>
