--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/TnTComponents/wwwroot/style.css
+/TnTComponents/wwwroot/style.min.css
