--- a/TnTComponents/compilerconfig.json
+++ b/TnTComponents/compilerconfig.json
@@ -1,6 +1,10 @@
 ﻿[
   {
-    "outputFile": "wwwroot/style.css",
-    "inputFile": "Styles/style.scss"
+    "outputFile": "wwwroot/style.dark.css",
+    "inputFile": "Styles/style.dark.scss"
+  },
+  {
+    "outputFile": "wwwroot/style.light.css",
+    "inputFile": "Styles/style.light.scss"
   }
 ]
