--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -16,11 +16,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0-rc.2.23455.8" />
+    <None Include="compilerconfig.json" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="compilerconfig.json" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.0-rtm.23478.18" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0-rtm.23478.18" />
+    <PackageReference Include="Microsoft.JSInterop" Version="8.0.0-rtm.23478.18" />
   </ItemGroup>
 
 </Project>
