Upgraded nuget packages

--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -20,9 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.0-rtm.23478.18" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0-rtm.23478.18" />
-    <PackageReference Include="Microsoft.JSInterop" Version="8.0.0-rtm.23478.18" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0" />
+    <PackageReference Include="Microsoft.JSInterop" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
