--- a/TnTComponents.Testing/TnTComponents.Client/TnTComponents.Client.csproj
+++ b/TnTComponents.Testing/TnTComponents.Client/TnTComponents.Client.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0-rtm.23478.18" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
