Reworked buttons and simplified them

--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,5 @@ FodyWeavers.xsd
 /TnTComponents/wwwroot/style.dark.min.css
 /TnTComponents/wwwroot/style.light.css
 /TnTComponents/wwwroot/style.light.min.css
+/TnTComponents/wwwroot/variables.css
+/TnTComponents/wwwroot/variables.min.css
