Reworked buttons and simplified them

--- a/TnTComponents/compilerconfig.json
+++ b/TnTComponents/compilerconfig.json
@@ -4,11 +4,7 @@
         "inputFile": "Styles/style.scss"
     },
     {
-        "outputFile": "wwwroot/style.dark.css",
-        "inputFile": "Styles/style.dark.scss"
-    },
-    {
-        "outputFile": "wwwroot/style.light.css",
-        "inputFile": "Styles/style.light.scss"
+        "outputFile": "wwwroot/variables.css",
+        "inputFile": "Styles/variables.scss"
     }
 ]
