--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -22,4 +22,8 @@
         <PackageReference Include="Microsoft.JSInterop" Version="8.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Forms\List\" />
+    </ItemGroup>
+
 </Project>
