Added repos to test items providers

--- a/LiveTest/LiveTest/LiveTest.csproj
+++ b/LiveTest/LiveTest/LiveTest.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <ProjectReference Include="..\LiveTest.Client\LiveTest.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
