Update conditional inclusion of `BuildWebCompiler2022`
Updated the `BuildWebCompiler2022` package reference in the `TnTComponents.csproj` file to be conditionally included based on the operating system. This package is now only included when the operating system is Windows NT, as opposed to its previous unconditional inclusion. This change was made to address potential compatibility issues with non-Windows NT operating systems.

--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -30,7 +30,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="BuildWebCompiler2022" Version="1.14.10" />
+        <PackageReference Include="BuildWebCompiler2022" Version="1.14.10" Condition="'$(OS)' == 'Windows_NT'"/>
         <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.4" />
         <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid" Version="8.0.4" />
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.4" />
