--- a/TnTComponents/compilerconfig.json
+++ b/TnTComponents/compilerconfig.json
@@ -2,5 +2,10 @@
     {
         "outputFile": "wwwroot/style.css",
         "inputFile": "Styles/style.scss"
+    },
+    {
+        "outputFile": "Dialog/BasicConfirmationDialog.razor.css",
+        "inputFile": "Dialog/BasicConfirmationDialog.razor.scss",
+        "minify": { "enabled": false }
     }
 ]
