--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -21,16 +21,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Content Remove="compilerconfig.json" />
-        <None Include="compilerconfig.json" />
-    </ItemGroup>
-
-    <ItemGroup>
         <SupportedPlatform Include="browser" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="BuildWebCompiler2022" Version="1.14.10" Condition="'$(OS)' == 'Windows_NT'" />
+        <PackageReference Include="DartSassBuilder" Version="1.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.4" />
         <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid" Version="8.0.4" />
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.4" />
