Updated .gitignore, CSS rules, and TnTComponents.csproj configurations ​ Updated .gitignore to ignore .css files. Removed CSS rule for .tnt-basic-confirmation-dialog-buttons in BasicConfirmationDialog.razor.css. Made several changes to TnTComponents.csproj including removal of TypeScript configurations, addition of DartSass output style configurations, a new "MoveCSS" target, and a new PackageReference to DartSassBuilder version 1.1.0.

--- a/.gitignore
+++ b/.gitignore
@@ -359,13 +359,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
-# Fody - auto-generated XML schema
-FodyWeavers.xsd
-/TnTComponents/wwwroot/style.css
-/TnTComponents/wwwroot/style.min.css
-/TnTComponents/wwwroot/style.dark.css
-/TnTComponents/wwwroot/style.dark.min.css
-/TnTComponents/wwwroot/style.light.css
-/TnTComponents/wwwroot/style.light.min.css
-/TnTComponents/wwwroot/variables.css
-/TnTComponents/wwwroot/variables.min.css
+*.css
