--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -1,28 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
-    <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-      <TypeScriptOutFile></TypeScriptOutFile>
-      <TypeScriptOutDir></TypeScriptOutDir>
-      <TypeScriptTarget>ES6</TypeScriptTarget>
-    </PropertyGroup>
-
-    <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-      <TypeScriptOutFile></TypeScriptOutFile>
-      <TypeScriptOutDir></TypeScriptOutDir>
-      <TypeScriptTarget>ES6</TypeScriptTarget>
-    </PropertyGroup>
-
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
-        <TypeScriptModuleKind>es6</TypeScriptModuleKind>
     </PropertyGroup>
 
     <ItemGroup>
         <SupportedPlatform Include="browser" />
     </ItemGroup>
+
+    <PropertyGroup>
+        <DartSassOutputStyle>compressed</DartSassOutputStyle>
+        <DartSassOutputStyle Condition="'$(Configuration)' == 'Debug'">expanded</DartSassOutputStyle>
+    </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="DartSassBuilder" Version="1.1.0" />
@@ -31,5 +22,9 @@
         <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
         <PackageReference Include="Microsoft.JSInterop" Version="8.0.6" />
     </ItemGroup>
+
+    <Target Name="MoveCSS" AfterTargets="Build">
+        <Move SourceFiles="Styles/style.css" DestinationFolder="wwwroot" />
+    </Target>
 
 </Project>
