--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -23,7 +23,7 @@
         <PackageReference Include="Microsoft.JSInterop" Version="8.0.6" />
     </ItemGroup>
 
-    <Target Name="MoveCSS" AfterTargets="Build">
+    <Target Name="MoveCSS" BeforeTargets="Build">
         <Move SourceFiles="Styles/style.css" DestinationFolder="wwwroot" />
     </Target>
 
