--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -11,11 +11,13 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.4" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid" Version="8.0.4" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.4" />
+        <PackageReference Include="DartSassBuilder" Version="1.1.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.6" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid" Version="8.0.6" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.6" />
         <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-        <PackageReference Include="Microsoft.JSInterop" Version="8.0.4" />
+        <PackageReference Include="Microsoft.JSInterop" Version="8.0.6" />
+        <PackageReference Include="System.Text.Encodings.Web" Version="8.0.0" />
     </ItemGroup>
 
     <Target Name="CopyStyles" BeforeTargets="Build">
