Update CSS file copy in build process
Changed the source file for copying to `wwwroot` from `Styles/app.css` to `Styles/style.css` in `TnTComponents.csproj`.

--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -36,6 +36,6 @@
     </ItemGroup>
     
     <Target Name="CopyCss" BeforeTargets="Build">
-        <Copy SourceFiles="Styles/app.css" DestinationFolder="wwwroot" />
+        <Copy SourceFiles="Styles/style.css" DestinationFolder="wwwroot" />
     </Target>
 </Project>
