Enhanced UI and async updates in TnTTabView
- Updated `.tnt-skeleton` styling for flexible width.
- Added loading animation to `.tabview` for a better user experience.
- Introduced `@keyframes tnt-tab-view-loading` for the tab view loading animation.
- Made `update` and `updateActiveIndicator` methods in TnTTabView async.
- Added logic to signal readiness of TnTTabView with `ready` class.
- Updated `TnTComponents.csproj` for explicit `compilerconfig.json` inclusion.

--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -17,6 +17,12 @@
         <FileVersion>0.1.0</FileVersion>
         <Version>0.1.0</Version>
     </PropertyGroup>
+    <ItemGroup>
+      <Content Remove="compilerconfig.json" />
+    </ItemGroup>
+    <ItemGroup>
+      <None Include="compilerconfig.json" />
+    </ItemGroup>
 
     <ItemGroup>
         <SupportedPlatform Include="browser" />
