--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -28,21 +28,22 @@
     <ItemGroup>
         <PackageReference Include="DartSassBuilder" Version="1.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+        <PackageReference Include="System.Text.Json" Version="9.0.0-rc.2.24473.5" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
-        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.8" />
-        <PackageReference Include="System.Text.Json" Version="8.0.4" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0-rc.2.24473.5" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.10" />
     </ItemGroup>
-
+    
     <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly">
-            <Version>9.0.0-rc.1.24452.1</Version>
+            <Version>9.0.0-rc.2.24474.3</Version>
         </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions">
-            <Version>9.0.0-rc.1.24431.7</Version>
+            <Version>9.0.0-rc.2.24473.5</Version>
         </PackageReference>
+        <PackageReference Include="System.Text.Encodings.Web" Version="9.0.0-rc.2.24473.5" />
     </ItemGroup>
 
     <Target Name="CopyCss" BeforeTargets="Build">
