Update NuGet packaging with date-based versioning
Modified `TnTComponentsToNuget.yml` to implement a new
packing command that sets the `PackageVersion` to the
current date in 'YYYY.MM.DD' format. Removed the previous
NuGet push command, suggesting a change in how packages
are published.

--- a/.github/workflows/TnTComponentsToNuget.yml
+++ b/.github/workflows/TnTComponentsToNuget.yml
@@ -27,5 +27,7 @@ jobs:
     - name: Publish to NuGet
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-      run: dotnet pack TnTComponents/TnTComponents.csproj --configuration Release --output ./nupkg
+      run: |
+        DATE=$(date +'%Y.%m.%d')
+        dotnet pack TnTComponents/TnTComponents.csproj --configuration Release --output ./nupkg /p:PackageVersion=$DATE
     - run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
