--- a/.github/workflows/TnTComponentsToNuget.yml
+++ b/.github/workflows/TnTComponentsToNuget.yml
@@ -28,6 +28,6 @@ jobs:
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
       run: |
-        DATE=$(date +'%Y.%m.%d')
+        DATE=$(date +'%Y.%m.%d').${{github.run_number}}
         dotnet pack TnTComponents/TnTComponents.csproj --configuration Release --output ./nupkg /p:PackageVersion=$DATE
     - run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
