Update project files for README packaging and versioning
- Added `PackageReadmeFile` property to include `README.md`.
- Removed `NeutralLanguage`, `AssemblyVersion`, `FileVersion`, and `Version` from `TnTComponents.csproj`.
- Updated `ItemGroup` to reference `README.md` from the parent directory.

--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -12,10 +12,6 @@
         <RepositoryUrl>https://github.com/Notallthatevil/TnTComponents</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageTags>blazor</PackageTags>
-        <NeutralLanguage>af</NeutralLanguage>
-        <AssemblyVersion>0.1.0</AssemblyVersion>
-        <FileVersion>0.1.0</FileVersion>
-        <Version>0.1.0</Version>
     </PropertyGroup>
     <ItemGroup>
       <Content Remove="compilerconfig.json" />
@@ -45,7 +41,11 @@
         <Copy SourceFiles="Styles/style.css" DestinationFolder="wwwroot" />
     </Target>
 
+    <PropertyGroup>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+    </PropertyGroup>
+
     <ItemGroup>
-        <None Include="README.md" Pack="true" PackagePath="\"/>
+        <None Include="..\README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 </Project>
