--- a/TnTComponents.AspNetCore/TnTComponents.AspNetCore.csproj
+++ b/TnTComponents.AspNetCore/TnTComponents.AspNetCore.csproj
@@ -13,5 +13,11 @@
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
+    <PropertyGroup>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+    </PropertyGroup>
 
+    <ItemGroup>
+        <None Include="..\README.md" Pack="true" PackagePath="\"/>
+    </ItemGroup>
 </Project>
