Update workflow and add project metadata
Updated the GitHub Actions workflow to include a `fetch-depth: 0` option for full repository history. Added metadata properties in the project file for `Authors`, `Company`, `PackageProjectUrl`, and `RepositoryUrl` to enhance project information.

--- a/TnTComponents.AspNetCore/TnTComponents.AspNetCore.csproj
+++ b/TnTComponents.AspNetCore/TnTComponents.AspNetCore.csproj
@@ -4,6 +4,10 @@
         <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <Authors>Nate Tripp</Authors>
+        <Company>Tripp'N Technology LLC</Company>
+        <PackageProjectUrl>https://github.com/Notallthatevil/TnTComponents</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/Notallthatevil/TnTComponents</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
