--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -17,6 +17,22 @@
         <FileVersion>0.1.0</FileVersion>
         <Version>0.1.0</Version>
     </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0|AnyCPU'">
+      <IsAotCompatible>True</IsAotCompatible>
+      <IsTrimmable>True</IsTrimmable>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0|AnyCPU'">
+      <IsAotCompatible>True</IsAotCompatible>
+      <IsTrimmable>True</IsTrimmable>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0|AnyCPU'">
+      <IsAotCompatible>True</IsAotCompatible>
+      <IsTrimmable>True</IsTrimmable>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0|AnyCPU'">
+      <IsAotCompatible>True</IsAotCompatible>
+      <IsTrimmable>True</IsTrimmable>
+    </PropertyGroup>
     <ItemGroup>
       <Content Remove="compilerconfig.json" />
     </ItemGroup>
