Refactor item provider structs for HTTP binding
Removed `TnTItemsProviderServerRequest` and integrated its
properties and methods into `TnTItemsProviderRequest`.
Added a `BindAsync` method to handle HTTP query parameter
binding. Updated project file to include
`Microsoft.AspNetCore.Http.Abstractions` package.

--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -17,6 +17,7 @@
 
     <ItemGroup>
         <PackageReference Include="DartSassBuilder" Version="1.1.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0" />
         <PackageReference Include="System.Text.Encodings.Web" Version="9.0.0" />
     </ItemGroup>
