Enhance NuGet packaging and project metadata
Updated `TnTComponentsToNuget.yml` to include packing for `TnTComponents.Extensions` and removed the `dotnet nuget push` command.
Added metadata properties in `TnTComponents.AspNetCore.csproj` and `TnTComponents.Extensions.csproj` for better package information.
Enhanced `TnTComponents.csproj` with additional metadata and streamlined property groups.
Retained the `CopyCss` target to ensure CSS files are copied to `wwwroot`.

--- a/.github/workflows/TnTComponentsToNuget.yml
+++ b/.github/workflows/TnTComponentsToNuget.yml
@@ -41,4 +41,5 @@ jobs:
       run: |
         dotnet pack TnTComponents/TnTComponents.csproj --configuration Release --output ./nupkg /p:PackageVersion=${{ steps.version_step.outputs.MajorMinorPatch }}
         dotnet pack TnTComponents.AspNetCore/TnTComponents.AspNetCore.csproj --configuration Release --output ./nupkg /p:PackageVersion=${{ steps.version_step.outputs.MajorMinorPatch }}
+        dotnet pack TnTComponents.Extensions/TnTComponents.Extensions.csproj --configuration Release --output ./nupkg /p:PackageVersion=${{ steps.version_step.outputs.MajorMinorPatch }}
     - run: dotnet nuget push ./nupkg/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
