Add badge support to buttons and introduce TnTBadge component
Updated `ButtonsComponent.razor` and `ImageButtons.razor` to include new buttons with badges. Introduced `TnTBadge.razor` and its logic in `TnTBadge.razor.cs` for customizable badge components. Modified `TnTButton` and `TnTImageButton` classes to support badges. Added styles in `_badge.scss` and updated `_buttons.scss` for proper badge positioning. Adjusted ripple effects in `_ripple.scss` and ensured proper imports in `style.scss`. Cleaned up project file by removing `compilerconfig.json` references and improved ripple handling in `TnTComponents.lib.module.js`.

--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -14,9 +14,8 @@
         <RepositoryUrl>https://github.com/Notallthatevil/TnTComponents</RepositoryUrl>
         <PackageTags>Blazor;Web;UI;.NET8;.NET9;Material</PackageTags>
     </PropertyGroup>
-
     <ItemGroup>
-        <Content Remove="compilerconfig.json" />
+      <Content Remove="compilerconfig.json" />
     </ItemGroup>
 
     <ItemGroup>
@@ -46,5 +45,6 @@
 
     <ItemGroup>
         <None Include="..\README.md" Pack="true" PackagePath="\" />
+        <None Include="compilerconfig.json" />
     </ItemGroup>
 </Project>
