--- a/.github/workflows/TnTComponentsToNuget.yml
+++ b/.github/workflows/TnTComponentsToNuget.yml
@@ -29,6 +29,11 @@ jobs:
       with:
         dotnet-version: '9.x'
 
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '8.x'
+
     - name: Restore dependencies
       run: dotnet restore
 
