--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -14,6 +14,22 @@
         <RepositoryUrl>https://github.com/Notallthatevil/TnTComponents</RepositoryUrl>
         <PackageTags>Blazor;Web;UI;.NET8;.NET9;Material</PackageTags>
     </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0|AnyCPU'">
+      <IsTrimmable>False</IsTrimmable>
+      <IsAotCompatible>False</IsAotCompatible>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0|AnyCPU'">
+      <IsTrimmable>False</IsTrimmable>
+      <IsAotCompatible>False</IsAotCompatible>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0|AnyCPU'">
+      <IsTrimmable>False</IsTrimmable>
+      <IsAotCompatible>False</IsAotCompatible>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0|AnyCPU'">
+      <IsTrimmable>False</IsTrimmable>
+      <IsAotCompatible>False</IsAotCompatible>
+    </PropertyGroup>
     <ItemGroup>
       <Content Remove="compilerconfig.json" />
     </ItemGroup>
