--- a/TnTComponents/TnTComponents.csproj
+++ b/TnTComponents/TnTComponents.csproj
@@ -13,6 +13,7 @@
         <PackageProjectUrl>https://github.com/Notallthatevil/TnTComponents</PackageProjectUrl>
         <RepositoryUrl>https://github.com/Notallthatevil/TnTComponents</RepositoryUrl>
         <PackageTags>Blazor;Web;UI;.NET8;.NET9;Material</PackageTags>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0|AnyCPU'">
       <IsTrimmable>False</IsTrimmable>
