Enhance TnTComponents with documentation and features
- Added XML documentation comments for improved clarity.
- Introduced new properties for configurability in components.
- Enabled documentation generation in project files.
- Refactored methods for better readability and maintainability.
- Enhanced error handling and validation across components.
- Improved code structure with new classes and interfaces.
- Removed redundant code and streamlined the codebase.
- Added new features for visibility toggling and styling options.
- Updated documentation for clearer parameter and return descriptions.

--- a/TnTComponents.AspNetCore/TnTComponents.AspNetCore.csproj
+++ b/TnTComponents.AspNetCore/TnTComponents.AspNetCore.csproj
@@ -12,6 +12,7 @@
         <IsAotCompatible>True</IsAotCompatible>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageTags>Blazor;Components;AspNetCore;.NET8;.NET9</PackageTags>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
